--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch": "gulp"
   },
   "dependencies": {
+    "angular-slider": "^0.2.3",
     "async": "^1.5.2",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.1",
