--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "watch": "gulp"
   },
   "dependencies": {
+    "angular-animate": "^1.6.8",
+    "angular-aria": "^1.6.8",
+    "angular-material": "^1.1.5",
     "angular-slider": "^0.2.3",
     "async": "^1.5.2",
     "bcrypt-nodejs": "^0.0.3",
@@ -32,6 +35,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "jsonwebtoken": "^5.7.0",
+    "md-steppers": "^0.3.4",
     "moment": "^2.12.0",
     "mongoose": "^4.4.8",
     "morgan": "^1.7.0",
